--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                       A hard working individual looking for a challenging position<br>
                        where I can showcase my skills and contribute to the growth of the organization</p>
                        <div class="button-container">
-                        <button class="btn" onclick="window.open('./CV RESUME 26 June.pdf')"
+                        <button class="btn" onclick="window.open("./CV RESUME 10 JULY.pdf")
                             >DOWNLOAD CV
                         </button>
                        
