--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             </div>
             <div class="contact-right">
                 <form name="submit-to-google-sheet"> <input type="text " name="name" placeholder="your name">
-                    <input type="email" name="email" placeholder="your name">
+                    <input type="email" name="email" placeholder="email">
                     <textarea name="message" rows="6" placeholder="your message"></textarea>
                     <button class="button btn" type="submit">SUBMIT</button>
                 </form>
